# kim-edn

./: .appveyor.yml  .codecov.yml  .gitattributes  .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
kim_edn/: __init__.py  _version.py  decoder.py  encoder.py  scanner.py  tool.py
tests/: __init__.py  __main__.py
tests/fixtures/: RD_000018659700_000_data.edn  RD_999984936526_000_data.edn  atomic-mass-commented.edn
tests/fixtures/properties/atomic-mass/2016-05-11-brunnels@noreply.openkim.org/: atomic-mass.edn  property-table-category.edn  synopsis.tpl
tests/test_kim_edn/: __init__.py  __main__.py  test_comment.py  test_decode.py  test_default.py  test_dump.py  test_encode_basestring_ascii.py  test_enum.py  test_fail.py  test_float.py  test_indent.py  test_pass1.py  test_pass2.py  test_pass3.py  test_recursion.py  test_scanstring.py  test_tool.py  test_unicode.py
