[build-system]
requires = ["setuptools", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "kim-edn"
authors = [{ name = "Yaser Afshar", email = "ya.afshar@gmail.com" }]
maintainers = [{ name = "Yaser Afshar", email = "ya.afshar@gmail.com" }]
description = "kim-edn - KIM-EDN encoder and decoder."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
]
dynamic = [ "version" ]
keywords = [ "kim-edn", "edn" ]

[project.urls]
Homepage = "https://github.com/openkim/kim-edn"
Issues = "https://github.com/openkim/kim-edn/issues"

[tool.setuptools.packages.find]
include = [ "kim_edn*" ]

[tool.setuptools.dynamic]
version = { attr = "kim_edn.__version__" }

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "kim_edn/_version.py"
versionfile_build = "kim_edn/_version.py"
tag_prefix = "v"
parentdir_prefix = "kim_edn-"
